force-app/main/default/objects/Dette__c/Dette__c.object-meta.xml
<CustomObject>
    <description>Dette non echue et Fais de gestion</description>
    <label>Dette</label>
    <nameField>
        <label>Libelle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dettes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>