force-app/main/default/objects/Dette__c/fields/ReglableClient__c.field-meta.xml
<CustomField>
    <fullName>ReglableClient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si la dette peut etre regle par le client directement</description>
    <label>Réglable par client</label>
    <type>Checkbox</type>
</CustomField>