force-app/main/default/objects/Dette__c/fields/Souscription__c.field-meta.xml
<CustomField>
    <fullName>Souscription__c</fullName>
    <description>Subscription Name</description>
    <label>Souscription</label>
    <length>20</length>
    <type>Text</type>
</CustomField>