force-app/main/default/objects/Dette__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Regle</fullName>
                <label>Réglé</label>
            </value>
            <value>
                <fullName>Efface</fullName>
                <label>Effacé</label>
            </value>
            <value>
                <fullName>Annule</fullName>
                <label>Annulé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>