force-app/main/default/objects/Dette__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frais de gestion</fullName>
            </value>
            <value>
                <fullName>Dette non echue</fullName>
                <label>Dette non échue</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>